--- a/pom.xml
+++ b/pom.xml
@@ -3,8 +3,14 @@
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+    <parent>
+        <groupId>org.sonatype.oss</groupId>
+        <artifactId>oss-parent</artifactId>
+        <version>7</version>
+    </parent>
+
     <groupId>pl.ais.maven</groupId>
-    <artifactId>enforcer-rules</artifactId>
+    <artifactId>ais-enforcer-rules</artifactId>
     <packaging>jar</packaging>
     <version>1.0-SNAPSHOT</version>
 
