--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,32 @@
     <artifactId>ais-enforcer-rules</artifactId>
     <packaging>jar</packaging>
     <version>1.0-SNAPSHOT</version>
+    <name>Rules for Maven Enforcer</name>
+
+    <licenses>
+        <license>
+            <name>The Apache Software License, Version 2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
+
+    <scm>
+        <connection>scm:git:git@github.com:aispl/ais-maven-enforcer.git</connection>
+        <developerConnection>scm:git:git@github.com:aispl/ais-maven-enforcer.git</developerConnection>
+        <url>git@github.com:aispl/ais-maven-enforcer.git</url>
+    </scm>
+
+    <developers>
+        <developer>
+            <id>pikus</id>
+            <name>Tomasz Pik</name>
+            <roles>
+                <role>Developer</role>
+            </roles>
+        </developer>
+    </developers>
+
 
     <properties>
         <api.version>1.2</api.version>
