--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
     <packaging>jar</packaging>
     <version>1.0-SNAPSHOT</version>
     <name>Rules for Maven Enforcer</name>
+    <url>https://github.com/aispl/ais-maven-enforcer</url>
 
     <licenses>
         <license>
